--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      .container > *{
+        margin-right : 0px;
+        margin-left : 0px;
+      }
+
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
